syntax = "proto3";

option csharp_namespace = "IdentityService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package Authorization;

service AuthorizationService {
  rpc Logout (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Login (LoginRequest) returns (LoginResult);
  rpc Register (RegisterParameterRequest) returns (google.protobuf.Empty);
  rpc GetUserInfo (google.protobuf.Empty) returns (UserInfoResult);
}

message LoginResult {
  bool LoginAllowed = 1;
}

message LoginRequest {
  string UserName = 1;
  string Password = 2;
  bool RememberMe = 3;
}

message RegisterParameterRequest{
  string UserName = 1;
  string Password = 2;
}

message UserInfoResult {
	bool IsAuthenticated = 1;
	string UserName = 2;
	map<string, string> ExposedClaims = 3;
}
